# stellar-bootcamp-padala-vision

./: .gitignore  README.md  package-lock.json  package.json
backend/: .env.example  package.json
backend/src/: app.ts  index.ts
backend/src/config/: env.test.ts  env.ts
backend/src/controllers/: auth.controller.ts  disputes.controller.ts  orders.controller.ts  reconcile.controller.ts  (+4 more)
backend/supabase/: bootstrap.sql  contract-registry-seed.sql  supabase-demo-actors.sql
contract/: Cargo.toml  README.md
contract/src/: lib.rs
contract/test_snapshots/tests/: allows_same_nonce_on_different_orders.1.json  dispute_marks_order_disputed.1.json  records_transition_timestamps_for_assignment_and_transit.1.json  refunds_buyer_after_assigned_timeout_window.1.json  refunds_buyer_after_dispute_inactivity_timeout_window.1.json  refunds_buyer_after_in_transit_timeout_window.1.json  refunds_buyer_after_timeout.1.json  rejects_dispute_from_non_participant.1.json  rejects_duplicate_dispute_opening.1.json  rejects_invalid_state_transition.1.json  rejects_refund_before_funded_timeout_window.1.json  rejects_release_when_nonce_already_consumed_for_order.1.json  rejects_release_while_disputed.1.json  rejects_release_with_expired_attestation.1.json  releases_seller_and_rider_after_valid_attestation.1.json
docs/: api-contracts.md  architecture.md  contract-interface.md  implementation-plan.md  setup.md
frontend/: .env.example  index.html  package.json  tailwind.config.ts  tsconfig.node.json
frontend/src/: App.tsx  main.tsx
shared/: package.json
shared/src/: index.ts
(+186 files in other folders)
