[package]
name = "padala-vision-contract"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "25.3.0"

[dev-dependencies]
ed25519-dalek = "2.2.0"
rand = "0.8.5"
soroban-sdk = { version = "25.3.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
